--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
             <button class="text-sm opacity-100 bg-white text-black p-1.5 mt-2">Shop Now<i class="fa-solid fa-arrow-right" style="color: #000000; padding-left: 3px;"></i></button>
         </div>
         <div id="slider-img-cont" class="flex flex-row">
-            <img src="/img/slide1.jpg" style="width: 100%;" >
-            <img src="/img/slide2.jpg" style="width: 100%;">
-            <img src="/img/slide3.jpg" style="width: 100%;">
-            <img src="/img/slide1.jpg" style="width: 100%;">
-            <img src="/img/slide2.jpg" style="width: 100%;">
-            <img src="/img/slide3.jpg" style="width: 100%;">
+            <img src="images/slide1.jpg" style="width: 100%;" >
+            <img src="images/slide2.jpg" style="width: 100%;">
+            <img src="images/slide3.jpg" style="width: 100%;">
+            <img src="images/slide1.jpg" style="width: 100%;" >
+            <img src="images/slide2.jpg" style="width: 100%;">
+            <img src="images/slide3.jpg" style="width: 100%;">
         </div>
         <div class="absolute flex end-2 z-20 md:end-5 lg:end-10">
             <i class="fa-solid fa-angle-right text-[6vw] md:text-[6vw] lg:text-[6vw]"></i>
