--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!-- responsivenav -->
     <nav
       id="navbar"
-      class="flex flex-row items-center justify-between py-2 px-5 bg-whitesticky z-50 top-0 md:py-2.5 lg:py-4"
+      class="flex flex-row items-center justify-between py-2 px-5 bg-white sticky z-50 top-0 md:py-2.5 lg:py-4"
     >
       <h1 class="text-2xl" style="font-weight: 700">Nostra</h1>
       <i id="navmenu" class="fa-solid fa-bars" style="color: #000000"></i>
@@ -168,9 +168,10 @@
       </div>
     </section>
     <!-- brandlist -->
-    <section class="mx-2 mt-[15px] md:mt-1">
-        <h1 class="font-bold text-xl lg:text-2xl">Brands</h1>
-        <div id="brandlist" class="flex basis-1 items-center justify-between">
+     <section class="mx-[2vw]">
+    <section class="mt-[3vw]">
+        <h1 class="font-bold text-2xl lg:text-3xl">Brands</h1>
+        <div id="brandlist" class="flex basis-1 items-center justify-between mt-[1vw]">
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" id="puma" class="w-[50%] block m-auto">
                     <path d="M21.17 12.59c-.1 0-.19.38-.38.57s-.32.13-.41.29 0 .17-.06.28-.32.27-.32.44.23.29.42.46.17.24.36.31.4-.13.61-.06.34.09.38.27 0 .42-.21.39a2.31 2.31 0 0 0-.77-.07c-.46 0-1 .2-1 .71a.59.59 0 0 0 .67.56c.23 0 .12-.32.25-.46s1.13.61 2 .61a1.15 1.15 0 0 0 .93-.39s.06-.07.1-.07a.39.39 0 0 1 .13.05 4.61 4.61 0 0 0 3.9 1.75 1.82 1.82 0 0 1 1.14.5 3 3 0 0 1 .66 1.18A6.4 6.4 0 0 0 31 22l.68.53v.17c0 .44-.08 1.71.87 1.77.23 0 .17-.15.17-.27a1.31 1.31 0 0 1 .08-.67c.16-.31-.34-.45-.33-1.13 0-.5-.41-.42-.62-.8a1 1 0 0 1-.23-.61 5.29 5.29 0 0 0-.51-2.78c-.15-.19-.27-.26-.13-.35a2.42 2.42 0 0 0 1-1 6.08 6.08 0 0 1 1.32-2.29 3.89 3.89 0 0 1 .54-.36 3.64 3.64 0 0 0 .89-.51c.22-.22.4-.68.18-.95s-.73-.07-.93 0c-1.46.86-1.67 2.39-2.18 3.26a2.33 2.33 0 0 1-1.64 1.26 3 3 0 0 1-1.39-.27 7.13 7.13 0 0 1-1.92-1.27c-.31-.24-2.69-2.58-4.63-2.68 0 0-.24-.48-.3-.48s-.29.28-.39.32-.26-.33-.36-.32m-8.52 14.02a.36.36 0 0 1-.34-.34v-6h-2v6.65a.6.6 0 0 0 .59.6h3.48a.59.59 0 0 0 .59-.6v-6.69H13v6a.36.36 0 0 1-.34.34m6.65-6.34h-3a.65.65 0 0 0-.65.65v6.6h2v-6.05a.35.35 0 0 1 .34-.34.34.34 0 0 1 .34.33v6.06h2V21.4a.34.34 0 0 1 .68 0v6.05h2v-6.6a.65.65 0 0 0-.65-.65h-3M9 25.64H7v1.82H5v-7.25h4a.64.64 0 0 1 .64.65V25a.65.65 0 0 1-.64.64zm-1.34-4.22a.34.34 0 0 0-.33-.35H7v3.67h.34a.34.34 0 0 0 .33-.34v-3"></path>
@@ -219,14 +220,63 @@
         </div>
     </section>
     <!-- customer exp -->
-     <section>
-        <div>
-            <p>We Provide Best Customer Experiences</p>
-            <p>||  We ensure that our customer have the best shopping experience</p>
+     <section class="mt-[4vw]">
+        <div class="flex items-center justify-between">
+          <div>
+            <p class="text-[2.3vw] font-bold">We Provide Best</p>
+            <p class="text-[2.3vw] font-bold">Customer Experiences</p>
+          </div>
+          <div>
+            <p class="text-[1.6vw]">|| We ensure that our customer have the best shopping experience</p>
+          </div>
         </div>
-        <div>
-
+        <div class="flex gap-3 mt-[3vw]">
+          <div class="bg-[#F2F4F7] rounded-lg p-2.5">
+            <i style="font-size: 3vw;margin-bottom: 10px;" class="fa-regular fa-circle-check"></i>
+            <h4 class="text-[1vw] font-bold">Original product</h4>
+            <p class="text-[1vw]">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, nulla?</p>
+          </div>
+          <div class="bg-[#F2F4F7] rounded-lg p-2.5">
+              <i style="font-size: 3vw;margin-bottom: 10px;" class="fa-regular fa-face-smile"></i>
+              <h4 class="text-[1vw] font-bold">Satisfaction gurantee</h4>
+              <p class="text-[1vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, vel.</p>
+          </div>
+          <div class="bg-[#F2F4F7] rounded-lg p-2.5">
+              <i style="font-size: 3vw;margin-bottom: 10px;" class="fa-solid fa-broom"></i>
+              <h4 class="text-[1vw] font-bold">New Arrival Everyday</h4>
+              <p class="text-[1vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dignissimos!</p>
+          </div>
+          <div class="bg-[#F2F4F7] rounded-lg p-2.5">
+            <i style="font-size: 3vw;margin-bottom: 10px;" class="fa-solid fa-truck-fast"></i>
+            <h4 class="text-[1vw] font-bold">Fast&Free Delivery</h4>
+            <p class="text-[1vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, rem?</p>
+          </div>
         </div>
+    </section>
+    <!-- Newarrival -->
+     <section class="mt-[4vw]">
+      <div>
+        <h1 class="text-2xl lg:text-3xl font-bold">New Arrivals</h1>
+      </div>
+      <div class="flex justify-between mt-[4vw]">
+        <div class="text-center relative">
+          <img style="width:20vw; height: 20vw;" class="relative rounded-sm" src="/images/newarr1.avif">
+           <button class="bg-slate-50 text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw]">Shop Now</button>
+        </div>
+        <div class="text-center relative">
+          <img style="width:20vw; height: 20vw" class="relative rounded-sm" src="/images/newarr2.avif">
+          <button class="bg-slate-50 text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw]">Shop Now</button>
+        </div>
+        <div class="text-center relative">
+          <img style="width:20vw; height: 20vw" class="relative rounded-sm" src="/images/newarr3.avif">
+          <button class="bg-slate-50 text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw]">Shop Now</button>
+        </div>
+        <div class="text-center relative">
+          <img style="width:20vw; height: 20vw" class="relative rounded-sm" src="/images/newarr4.avif">
+          <button class="bg-slate-50 text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw]">Shop Now</button>
+        </div>
+      </div>
      </section>
+    </section>
   </body>
 </html>
