update images with error correct

--- a/index.html
+++ b/index.html
@@ -251,22 +251,22 @@
       </div>
       <div class="flex justify-between mt-[4vw]">
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw;" class="relative rounded-sm" src="/images/newarr-img1.jpg">
+          <img style="width:20vw; height: 23vw;" class="relative rounded-sm" src="images/newarr-img1.jpg">
           <div class="absolute w-[100%] h-[100%] bg-[#121212] z-[2] top-0 opacity-30"></div>
            <button class="bg-[#ffffff] text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw] z-30 hover:bg-[#121212] hover:text-[#ffffff] transition delay-50 duration-200 ease-in-out ...">Shop Now</button>
         </div>
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="/images/newarr-img2.jpg">
+          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="images/newarr-img2.jpg">
           <div class="absolute w-[100%] h-[100%] bg-[#121212] z-[2] top-0 opacity-30"></div>
           <button class="bg-[#ffffff] text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw] z-30 hover:bg-[#121212] hover:text-[#ffffff] transition delay-50 duration-200 ease-in-out ...">Shop Now</button>
         </div>
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="/images/newarr-img3.jpg">
+          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="images/newarr-img3.jpg">
           <div class="absolute w-[100%] h-[100%] bg-[#121212] z-[2] top-0 opacity-30"></div>
           <button class="bg-[#ffffff] text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw] z-30 hover:bg-[#121212] hover:text-[#ffffff] transition delay-50 duration-200 ease-in-out ...">Shop Now</button>
         </div>
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="/images/newarr-img4.jpg">
+          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="images/newarr-img4.jpg">
           <div class="absolute w-[100%] h-[100%] bg-[#121212] z-[2] top-0 opacity-30"></div>
           <button class="bg-[#ffffff] text-[1.2vw] absolute top-[15vw] left-[5vw] rounded-[2vw] px-[2.5vw] py-[0.8vw] z-30 hover:bg-[#121212] hover:text-[#ffffff] transition delay-50 duration-200 ease-in-out ..." >Shop Now</button>
         </div>
@@ -278,24 +278,24 @@
       </div>
       <div class="flex justify-between mt-[4vw]">
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw;" class="relative rounded-sm" src="/images/mw-img1.jpg">
+          <img style="width:20vw; height: 23vw;" class="relative rounded-sm" src="images/mw-img1.jpg">
           <div class="absolute w-[100%] h-[100%] bg-black z-[2] top-0 opacity-5"></div>
           <p class="bg-[#121212] absolute text-[#ffffff] text-[2.2vw] px-2 top-0">sale</p>
         </div>
         
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="/images/mw-img2.jpg">
+          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="images/mw-img2.jpg">
           <div class="absolute w-[100%] h-[100%] bg-black z-[2] top-0 opacity-5"></div>
           <p class="bg-[#121212] absolute text-[#ffffff] text-[2.2vw] px-2 top-0">sale</p>
         </div>
         
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="/images/mw-img3.jpg">
+          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="images/mw-img3.jpg">
           <div class="absolute w-[100%] h-[100%] bg-black z-[2] top-0 opacity-5"></div>
           <p class="bg-[#121212] absolute text-[#ffffff] text-[2.2vw] px-2 top-0">sale</p>
         </div>
         <div class="text-center relative">
-          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="/images/mw-img4.jpg">
+          <img style="width:20vw; height: 23vw" class="relative rounded-sm" src="images/mw-img4.jpg">
           <div class="absolute w-[100%] h-[100%] bg-black z-[2] top-0 opacity-5"></div>
           <p class="bg-[#121212] absolute text-[#ffffff] text-[2.2vw] px-2 top-0">sale</p>
         </div>
