update nac color

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
       <h1 class="text-2xl text-[#FFFFFF]" style="font-weight: 700">Nostra</h1>
       <i id="navmenu" class="fa-solid fa-bars" style="color: #ffffff"></i>
       <div id="navmenu2" class="flex flex-row w-2/4 justify-around">
-        <p class="hover:underline cursor-pointer">Home</p>
-        <p class="hover:underline cursor-pointer">New Arrival</p>
-        <p class="hover:underline cursor-pointer">Most Wanted</p>
-        <p class="hover:underline cursor-pointer">Collections</p>
-        <p class="hover:underline cursor-pointer">Contact Us</p>
+        <p class="hover:underline cursor-pointer text-[#ffffff]">Home</p>
+        <p class="hover:underline cursor-pointer text-[#ffffff]">New Arrival</p>
+        <p class="hover:underline cursor-pointer text-[#ffffff]">Most Wanted</p>
+        <p class="hover:underline cursor-pointer text-[#ffffff]">Collections</p>
+        <p class="hover:underline cursor-pointer text-[#ffffff]">Contact Us</p>
       </div>
     </nav>
     <!-- imagebanner -->
